Aligned nav elements and fixed UI issues

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ nav ul li {
 }
 
 nav ul li:hover {
-  background-color: #eeee00;
+  background-color:   #999999;
   color: blue;
   border-radius: 10px;
 }
@@ -44,7 +44,7 @@ nav ul li:hover {
 }
 
 .nav-icons {
-  padding: 15px;
+  padding: 1.5% 5% 1.5% 0;
 }
 
 .nav-icons a {
@@ -104,8 +104,8 @@ section {
     display: block;
     background-color: lightgrey;
     text-align: center;
-    margin-left: 5%;
   }
+
 }
 
 /*nav end, about start*/
@@ -154,6 +154,7 @@ section {
   
   .profile {
     margin: 0 auto;
+    max-width: 60%;
   }
   
 }
